# AGENAUTON

./: .gitignore  CNAME  README.md  Shipinwangzhan.md  duoshe.html  guanwang.html  index.html  lang.js  sheji.md  shipinwagnzhansheji.md  zhujiliushi.html  推广选题库.md
Agenauton/: CONTRIBUTING.md  LICENSE  README.md
Agenauton/01_Soul_Extraction/: README.md  advanced_techniques.md  identity_masks.md  probing_scripts.md
Agenauton/02_Spirit_Refining/: 26_Dimensions_Template.md  README.md  glossary.md
Agenauton/03_Soul_Forging/: README.md  ai_architect_prompt.md  cursor_rules.md  skeleton_generator.md
Agenauton/04_Case_Studies/: README.md
Agenauton/05_Defensive_Lab/: anti_probing.md  safety_alignment.md
Agenauton/community/: roadmap.md
Agenauton/cursor_rules/: forgebase.cursorrules
Agenauton/guide/: index.html
Agent-RE-Protocol/: README.md
Agent-RE-Protocol/template/: architecture.md
Agentic-Foundry-2026/01_Mimic_Path/: README.md
Agentic-Foundry-2026/03_Enterprise_Path/: README.md
Lianhun-Agent-Protocol/: .env.example
Lianhun-Agent-Protocol/01_Summoning/: probes.md
Lianhun-Agent-Protocol/04_Evolution/: evolution_guide.md
archive/: README.md
archive/Lianhun-Agent-Protocol/: README.md  pyproject.toml
archive/Lianhun-Agent-Protocol/02_Refining/: architecture_map.md
archive/Lianhun-Agent-Protocol/03_Possession/: cursor_rules.md
archive/Lianhun-Agent-Protocol/src/: main.py
archive/Lianhun-Agent-Protocol/src/agents/: planner.py
archive/Lianhun-Agent-Protocol/src/core/: config.py  state.py
marketing/: index.html  slogans.md
(+19 files in other folders)
